# a-sinq

./: CMakeLists.txt  README.md
examples/: loop_example.cpp  result_example.cpp  slot_example.cpp
include/: a_sinq.h
tests/: loop_test.cpp  lru_test.cpp  slot_test.cpp
